@@ -14,6 +14,7 @@ flumotion_PYTHON = \
 	interfaces.py \
 	log.py \
 	keycards.py \
+	planet.py \
 	pygobject.py \
 	registry.py \
 	reload.py \
