@@ -1,3 +1,11 @@
+2005-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/common/Makefile.am:
+	* flumotion/common/planet.py:
+	  adding planet state stuff
+	* flumotion/twisted/flavors.py:
+	  fixing interface description
+
 2005-01-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/admin/gtk/greeter.py:
